k8s/overlays/nuc-prod/zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: home-ops-strip-z2m@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: glumserver.localdomain
      http:
        paths:
          - path: /z2m
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
